syntax = "proto3";

package todo.v1;

option go_package = "antigravity/gen/todov1;todov1";

service TodoService {
  rpc AddTodo(AddTodoRequest) returns (Todo);
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
  rpc UpdateTodo(UpdateTodoRequest) returns (Todo);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}

message Todo {
  string id = 1;
  string text = 2;
  bool completed = 3;
}

message AddTodoRequest {
  string text = 1;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}

message UpdateTodoRequest {
  string id = 1;
  string text = 2;
  bool completed = 3;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {
  string id = 1;
}
